Fixed overlapping issue of the post-filter element

--- a/r2/r2/public/static/main.css
+++ b/r2/r2/public/static/main.css
@@ -248,9 +248,8 @@ ul#filternav li:last-child {
 }
 
 #post-filter {
-	float: left;
 	position: relative;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
 }
 #post-filter div.filter-active {
 	background: url(/static/disclosure-triangle.gif) no-repeat 0 2px;
